--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+/*
+    WORKSPACE START
+*/
+.workspace-grid{
+    /* height: 100%; */
+    height: 100vh !important;
+    padding: 0 !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.workspace-menu{
+    padding: 0 !important; 
+    background: purple !important;
+    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.workspace-chat{
+    background: gray !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*
+    WORKSPACE END
+*/
