--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,32 @@
 /*
+    GLOBAL START
+*/
+
+.floated-right {
+    float: right !important;
+}
+
+.h-100{
+    height: 100% !important;
+}
+
+.unstyled{
+    all:unset !important;
+}
+
+.text-btn:hover{
+    cursor: pointer !important;
+}
+
+.center-vertical{
+    top: 25%;
+}
+
+/* 
+    GLOBAL END
+*/
+
+/*
     WORKSPACE START
 */
 
@@ -143,6 +171,12 @@ main{
     CHAT START
 */
 
+#profile-img-chat{
+    margin: 0 !important;
+    padding: 0 !important;
+    border-radius: 4px !important;
+}
+
 .chat-grid{
     height: calc(100% - 67px) !important;
 }
@@ -193,6 +227,63 @@ main{
     color: rgb(0, 119, 255) !important;
 }
 
+.user-count-channel-btn:hover{
+    cursor: pointer !important;    
+}
+
+.user-count-channel-btn:hover > .double-button-half-right{
+    background: rgba(var(--sk_foreground_min,29,28,29),.04);
+}
+
+.user-count-channel-btn{
+    width: 48px !important;
+
+}
+
+#chat-header-menu-container
+ {
+     float: right;
+ }
+
+.user-count-channel{
+    /* padding: 0 8px 10px 0px !important; */
+    height: 50px !important;
+    padding-right: 18px !important;
+    display: block !important;
+    float: right !important;
+    font-weight: bold;
+
+}
+
+.user-count-channel-btn:hover{
+    cursor: pointer;
+}
+
+.double-button-half-left{
+    width: 50% !important;
+    height: 100% !important;
+    display: block !important;
+    margin: 0 !important;
+    padding:  0 !important;
+    float: left !important;
+}
+
+.double-button-half-right{
+    width: 50% !important;
+    height: 29px !important;
+    display: block !important;
+    margin: 0 !important;
+    padding:  0 !important;
+    float: right !important;
+}
+
+
+
+.double-button-count{
+    padding-top: 3px !important;
+    padding-left: 8px !important;
+}
+
 /* 
     CHAT END
 */
@@ -203,27 +294,5 @@ main{
 */
 
 
-/*
-    GLOBAL START
-*/
 
-.h-100{
-    height: 100% !important;
-}
-
-.unstyled{
-    all:unset !important;
-}
-
-.text-btn:hover{
-    cursor: pointer !important;
-}
-
-.center-vertical{
-    top: 25%;
-}
-
-/* 
-    GLOBAL END
-*/
 
