--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -343,7 +343,7 @@ main{
 }
 
 .message-row{
-    display: inline-block !important;
+    /* display: inline-block !important; */
     width: 100% !important;
     padding: 8px 10px !important;
     padding-left: 0px !important;
@@ -383,8 +383,8 @@ main{
 }
 
 .chat-message-side-time{
-    float: right !important;
-    margin-right: 8px !important; 
+    /* float: right !important; */
+    /* margin-right: 8px !important;  */
 }
 
 .chat-message-username{
