--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,11 @@
     GLOBAL START
 */
 
+.ui.grid {
+    margin: 0 !important;
+}
+
+
 
 
 .rotate-180{
@@ -33,6 +38,11 @@ filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
     top: 25%;
 }
 
+.nopadding-nomargin{
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 /* 
     GLOBAL END
 */
@@ -44,7 +54,8 @@ filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
  
 
 #root {
-    height: 100vh;  
+    height: 100vh;
+    /* padding: 0.75% !important;   */
     overflow-y: hidden;  
     overflow-x: hidden; 
 }
@@ -60,32 +71,51 @@ main{
 }
 
 .workspace-first-row{
-    background: #361737;
+    background: #350d36;
     /* height: 100px; */
     width: 100%;
-    height: 3%;
+    height: 38px !important;
+    padding: 0 !important;
+    /* padding-bottom: 1% !important; */
+    /* padding: 0 !important; */
+
 }
 
 .workspace-second-row{
     width: 100% !important;
     height: 97% !important;
+    padding: 0 !important;
+    margin: 0 !important;
 }
 
 .bold{
     font-weight: bold;
 }
 
+
 * {
+    /* padding: 0 !important;
+    margin: 0 !important; */
+    font-family: Lato,appleLogo,sans-serif;
+}
+
+/* .workspace-name-grid > * > * > *   {
+
     padding: 0 !important;
     margin: 0 !important;
-    font-family: Lato,appleLogo,sans-serif;
+} */
+
+.workspace-menu-divider{
+
 }
 
 .workspace-name-grid{
     height: 63.99px;
-    padding-top: 6% !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    /* padding-top: 6% !important;
     padding-bottom: 7% !important;
-    padding-left: 5% !important;
+    padding-left: 5% !important; */
 }
 
 .workspace-name-grid:hover{
@@ -119,19 +149,19 @@ main{
 }
 
 .workspace-menu{
-    /* padding: 0 !important;  */
-    background: #401C41 !important;
+    padding: 0 !important; 
+    background: #3F0E40 !important;
     height: 100%;
     color: white;
     
 }
 
 .new-message-btn{
-    height: 36px;
-    width: 36px;
-    background: white !important;
-    float: right !important;
-    margin-right: 15% !important;
+    /* height: 24px; */
+    /* width: 12px; */
+    /* background: white !important; */
+    /* float: right !important; */
+    /* margin-right: 15% !important; */
     /* padding-bottom: 10px !important; */
 }
 
@@ -156,14 +186,24 @@ main{
 }
 
 .workspace-submenu-row{
-    padding-bottom: 1.5% !important;
+    /* padding-bottom: 1.5% !important;
     padding-top: 1.5% !important;
-    padding-left: 5% !important;
+    padding-left: 5% !important; */
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+#drafts-row{
+    margin-top: 10px !important; 
 }
 
 .workspace-submenu-row:hover{
     background: #361737;
     cursor: pointer;
+}
+
+#write-messsage-icon{
+    background: white !important;
 }
 
 
@@ -174,8 +214,17 @@ main{
     /* margin: auto !important; */
 }
 
+.workspace-name{
+    text-align: center !important;
+}
+
+
 .workspace-main-row{
-    margin-bottom: 7% !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    height: 64px !important;
+    border-top: 1px solid rgb(82,38,83);
+    border-bottom: 1px solid rgb(82,38,83);
 }
 
 .create-chan-header{
@@ -211,11 +260,12 @@ border: unset !important;
 
 .workspace-chat{
     height: 100% !important;
+    padding: 0 !important;
 }
 
 
 .chat-header {
-    height: 67px !important;
+    height: 64px !important;
     padding: 0 !important;
     margin: 0 !important;   
     padding-left: 1% !important;
