--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -166,7 +166,7 @@ main{
 }
 
 .channel-title-menu{
-  padding-left: 3% !important;
+    padding-left: 2px !important;
 }
 
 .add-channels-menu{
@@ -228,10 +228,20 @@ main{
 
 .icon-col{
     margin-top: 1% !important;
+    margin-left: 3px !important;
 }
 
 .collapsible-menu-list{
-    margin-left: 8% !important;     
+    /* margin-left: 8% !important;      */
+}
+
+.workspace-submenu-row-item{
+    padding-left: 12% !important;
+}
+
+.workspace-submenu-row-item:hover{
+    background: #361737;
+    cursor: pointer;
 }
 
 .workspace-menu-row{
@@ -250,7 +260,9 @@ main{
     padding-top: 1.5% !important;
     padding-left: 5% !important; */
     padding: 0 !important;
+    padding-left: 5% !important;
     margin: 0 !important;
+    width: 100% !important;
 }
 
 #drafts-row{
@@ -629,6 +641,12 @@ padding-bottom: 0 !important;
     display: block !important;
     overflow-x:  hidden !important;
     word-wrap: break-word !important; 
+}
+
+.side-menu-padding{
+    padding: 5% !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 /* 
