date separator showing date, yesterday or today depending on message date

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -404,6 +404,7 @@ padding-bottom: 0 !important;
   .date-separator-container{
       position: relative;
       width: 100% !important;
+      text-align: center;
   }
 
   .date-separator-wrapper{
