--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -427,15 +427,27 @@ padding-bottom: 0 !important;
     width: 160px; 
  }
 
+ .searchbar-add-users > .input{
+     width: 100% !important;
+ }
+
+ .searchbar-add-users > .results{
+     width: 100% !important;
+ }
+ .searchbar-add-users-results{
+     width: 100% !important;
+ }
+
 
   .today-date{
      width: 100px; 
   }
 
-  date-separator-date{
 
+  .channel-add-desc{
+      color: gray;
+      padding-left: 1.5rem;
   }
-  
 
 .chatbox-input{
 
