--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -104,9 +104,16 @@ filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
 
 #root {
     height: 100vh;
+    /* margin-top: 10px; */
     /* padding: 0.75% !important;   */
     overflow-y: hidden;  
     overflow-x: hidden; 
+}
+
+.profile-col{
+    /* padding: 0 !important; */
+    /* margin: 0 !important; */
+    float: right !important;
 }
 
 main{
@@ -123,7 +130,7 @@ main{
     background: #350d36;
     /* height: 100px; */
     width: 100%;
-    height: 38px !important;
+    height: 40px !important;
     padding: 0 !important;
     /* padding-bottom: 1% !important; */
     /* padding: 0 !important; */
@@ -679,6 +686,23 @@ padding-bottom: 0 !important;
     border-radius: 4px;  
     margin-right: 8px !important;   
     margin-top: 5px !important;
+}
+
+#profile-img{
+    height: 32px;
+    width: 32px;
+    float: right !important;
+    border-radius: 4px;  
+    margin-right: 8px !important;   
+    margin-top: 4px !important;
+}
+
+.profile-img-btn{
+    float: right !important;
+}
+
+.profile-img-btn:hover{
+    cursor: pointer !important;
 }
 
 
